--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,21 +19,21 @@ services:
   hdfsnamenode:
     build: hdfs-namenode
     volumes:
-      - "./cluster-conf:/etc/hadoop/cluster-conf:ro"
+      - "./conf/cluster-conf:/etc/hadoop/cluster-conf:ro"
     networks:
       - local
 
   yarnresourcemanager:
     build: yarn-resource-manager
     volumes:
-      - "./cluster-conf:/etc/hadoop/cluster-conf:ro"
+      - "./conf/cluster-conf:/etc/hadoop/cluster-conf:ro"
     networks:
       - local
 
   mapreducehistory:
     build: mapreduce-history
     volumes:
-      - "./cluster-conf:/etc/hadoop/cluster-conf:ro"
+      - "./conf/cluster-conf:/etc/hadoop/cluster-conf:ro"
     networks:
       - local
 
@@ -41,14 +41,14 @@ services:
     build: cluster-node
     domainname: cdh5-local
     volumes:
-      - "./cluster-conf:/etc/hadoop/cluster-conf:ro"
+      - "./conf/cluster-conf:/etc/hadoop/cluster-conf:ro"
     networks:
       - local
 
   hiveserver:
     build: hive-server
     volumes:
-      - "./cluster-conf:/etc/hadoop/cluster-conf:ro"
+      - "./conf/cluster-conf:/etc/hadoop/cluster-conf:ro"
     networks:
       - local
 
@@ -58,7 +58,7 @@ services:
            PGPASSWORD: elephants
      build: hive-metastore
      volumes:
-       - "./cluster-conf:/etc/hadoop/cluster-conf:ro"
+       - "./conf/cluster-conf:/etc/hadoop/cluster-conf:ro"
      networks:
        - local
 
