Change base image tag

--- a/cluster-node/Dockerfile
+++ b/cluster-node/Dockerfile
@@ -1,6 +1,6 @@
 # A cluster node has a datanode, a nodemanager and mapreduce.
 
-FROM local/ubuntu-cdh5-base
+FROM tilakpatidar/ubuntu-cdh5-base
 MAINTAINER Tilak Patidar tilakpatidar@gmail.com
 
 RUN apt-get update && apt-get install -y \
