--- a/yarn-resource-manager/Dockerfile
+++ b/yarn-resource-manager/Dockerfile
@@ -1,6 +1,6 @@
 # Adds a resource manager
 
-FROM local/ubuntu-cdh5-base
+FROM tilakpatidar/ubuntu-cdh5-base
 MAINTAINER Tilak Patidar tilakpatidar@gmail.com
 
 RUN apt-get update && apt-get install -y hadoop-yarn-resourcemanager
