--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -1,6 +1,6 @@
 # Adds a ZooKeeper server
 
-FROM local/ubuntu-cdh5-base
+FROM tilakpatidar/ubuntu-cdh5-base
 MAINTAINER Tilak Patidar tilakpatidar@gmail.com
 
 RUN apt-get update && apt-get install -y zookeeper-server
