--- a/dns/Dockerfile
+++ b/dns/Dockerfile
@@ -9,6 +9,6 @@ CMD ["dnsmasq", "--no-daemon"]
 #perform cleanup to reduce image size
 RUN apt-get autoremove -y &&\
     apt-get clean &&\
-    rm -rf /var/lib/apt/lists/*&&\
+    rm -rf /var/lib/apt/lists/* &&\
     rm -rf /usr/share/doc/* /usr/share/man/* /usr/share/info/* &&\
-    find /var | grep '\.log$' | xargs rm -v
+    find /var | grep '\.log$' | xargs rm -fv
