--- a/hdfs/Dockerfile
+++ b/hdfs/Dockerfile
@@ -11,9 +11,10 @@ EXPOSE 22
 
 ENTRYPOINT ["hdfs"]
 
+USER root
 #perform cleanup to reduce base image size
 RUN apt-get autoremove -y &&\
     apt-get clean &&\
-    rm -rf /var/lib/apt/lists/*&&\
+    rm -rf /var/lib/apt/lists/* &&\
     rm -rf /usr/share/doc/* /usr/share/man/* /usr/share/info/* &&\
-    find /var | grep '\.log$' | xargs rm -v
+    find /var | grep '\.log$' | xargs rm -fv
