--- a/zookeeper/Dockerfile
+++ b/zookeeper/Dockerfile
@@ -19,6 +19,6 @@ CMD ["/opt/zookeeper/start.sh"]
 #perform cleanup to reduce base image size
 RUN apt-get autoremove -y &&\
     apt-get clean &&\
-    rm -rf /var/lib/apt/lists/*&&\
+    rm -rf /var/lib/apt/lists/* &&\
     rm -rf /usr/share/doc/* /usr/share/man/* /usr/share/info/* &&\
-    find /var | grep '\.log$' | xargs rm -v
+    find /var | grep '\.log$' | xargs rm -fv
